# eva

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package.json  vite.config.ts
backend-eva/: .env  .env.example  .gitattributes  .gitignore  Dockerfile  celerybeat-schedule  conftest.py  entrypoint.dev.sh  main.py  manage.py  pyproject.toml  pytest.ini
backend-eva/apps/accounts/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend-eva/apps/accounts/migrations/: 0001_initial.py
backend-eva/apps/accounts/tests/: __init__.py  test_api.py  test_schemas.py  test_services.py
backend-eva/apps/collaboration/: admin.py  api.py  apps.py  consumers.py  models.py  schemas.py  services.py  tasks.py
backend-eva/apps/collaboration/migrations/: 0001_initial.py
backend-eva/apps/collaboration/tests/: test_consumers.py  test_services.py
backend-eva/apps/common/: exceptions.py  models.py
backend-eva/apps/courses/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend-eva/apps/courses/migrations/: 0001_initial.py
backend-eva/apps/courses/tests/: test_services.py
backend-eva/apps/exercises/: adaptive.py  admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend-eva/apps/exercises/migrations/: 0001_initial.py
backend-eva/apps/gamification/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  tasks.py
backend-eva/apps/notifications/: admin.py  api.py  apps.py  consumers.py  models.py  schemas.py  services.py  tasks.py
backend-eva/apps/progress/: admin.py  analytics.py  api.py  apps.py  models.py  schemas.py  services.py  tasks.py
backend-eva/apps/projects/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend-eva/apps/social/: admin.py  api.py  apps.py  chatbot.py  consumers.py  models.py  schemas.py  services.py
backend-eva/backend_eva/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend-eva/backend_eva/tests/: test_asgi.py  test_integration.py
backend-eva/common/: exceptions.py  models.py  pagination.py  permissions.py  rate_limiting.py  sanitization.py  schemas.py
backend-eva/config/: celery.py  settings.py
docs/: diseno.md  (+5 more)
(+223 files in other folders)
