[project]
name = "backend-eva"
version = "0.1.0"
description = "EVA Learning Platform - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-ninja>=1.3,<2.0",
    "channels>=4.2,<5.0",
    "channels-redis>=4.2,<5.0",
    "celery>=5.4,<6.0",
    "redis>=5.2,<6.0",
    "bleach>=6.2,<7.0",
    "pyjwt>=2.9,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "daphne>=4.1,<5.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.115,<7.0",
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "django-stubs>=5.1,<6.0",
]
