[project]
name = "backend-eva"
version = "0.1.0"
description = "Backend para la plataforma de aprendizaje EVA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-ninja>=1.1",
    "channels>=4.0",
    "celery>=5.3",
    "redis>=5.0",
    "pyjwt>=2.8",
    "bleach>=6.1",
    "pydantic-settings>=2.2",
    "psycopg2-binary>=2.9",
    "uvicorn[standard]>=0.29",
    "daphne>=4.1",
    "dj-database-url>=3.1.2",
    "channels-redis>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "hypothesis>=6.98",
    "ruff>=0.3",
    "mypy>=1.9"
]
